edit of evaluation questions
Found a error in my programming from my last submission and trying to
correct this led to the cause of not being able to have more than four
questins in the evaluation starting with the fifth question the buttons
would not function correctly. I am currently looking to what can be
causing this

--- a/app/views/professor_evals/show.html.erb
+++ b/app/views/professor_evals/show.html.erb
@@ -17,12 +17,7 @@
 
 <p>
   <b>Q4:</b>
-  <%= @professor_e<h1>New professor_eval</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', professor_evals_path %>
-val.q4 %>
+  <%= @professor_eval.q4 %>
 </p>
 
 <p>
