--- a/app/views/response_sets/_evaluation.html.erb
+++ b/app/views/response_sets/_evaluation.html.erb
@@ -5,5 +5,11 @@
     Q2:<%= h(evaluation.q2) %>
     Q3:<%= h(evaluation.q3) %>
     Q4:<%= h(evaluation.q4) %>
+    Q5:<%= h(evaluation.q5) %>
+    Q6:<%= h(evaluation.q6) %>
+    Q7:<%= h(evaluation.q7) %>
+    Q8:<%= h(evaluation.q8) %>
+    Q9:<%= h(evaluation.q9) %>
+    Q10:<%= h(evaluation.q10) %>
     </p>
 <% end %>
