--- a/app/views/professors/show.html.erb
+++ b/app/views/professors/show.html.erb
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>   
+   
     <table class="prof_name_department">
         <tr>
             <td style="opacity:.8;background-color:#ffffff;"><h2 style='font-size:20pt;margin-left:30px;float:left;margin-top:0px;color:black; opacity:1;'><b>Name:</b> <%= "#{@professor.name}, #{@professor.first_name}" %></h2></td>
@@ -128,55 +131,7 @@ document.write("</select></td></tr>");
             <%= f.radio_button :q4, 3 %> 3
             <%= f.radio_button :q4, 4 %> 4
             <%= f.radio_button :q4, 5 %> 5
-        </div>
-        <div class="field">
-            <%= f.label :q5, "Q5: My instructor is accessible outside of class" %>
-            <%= f.radio_button :q5, 1 %> 1
-            <%= f.radio_button :q5, 2 %> 2
-            <%= f.radio_button :q5, 3 %> 3
-            <%= f.radio_button :q5, 4 %> 4
-            <%= f.radio_button :q5, 5 %> 5
-        </div>
-        <div class="field">
-            <%= f.label :q6, "Q6: My instructor encourages participation in class" %>
-            <%= f.radio_button :q6, 1 %> 1
-            <%= f.radio_button :q6, 2 %> 2
-            <%= f.radio_button :q6, 3 %> 3
-            <%= f.radio_button :q6, 4 %> 4
-            <%= f.radio_button :q6, 5 %> 5
-        </div>
-        <div class="field">
-            <%= f.label :q7, "Q7: The pace of the course is good" %>
-            <%= f.radio_button :q7, 1 %> 1
-            <%= f.radio_button :q7, 2 %> 2
-            <%= f.radio_button :q7, 3 %> 3
-            <%= f.radio_button :q7, 4 %> 4
-            <%= f.radio_button :q7, 5 %> 5
-        </div>
-        <div class="field">
-            <%= f.label :q8, "Q8: My instructor uses good examples in lecture" %>
-            <%= f.radio_button :q8, 1 %> 1
-            <%= f.radio_button :q8, 2 %> 2
-            <%= f.radio_button :q8, 3 %> 3
-            <%= f.radio_button :q8, 4 %> 4
-            <%= f.radio_button :q8, 5 %> 5
-        </div>
-        <div class="field">
-            <%= f.label :q9, "Q9: My instructor notices indications when students need help" %>
-            <%= f.radio_button :q9, 1 %> 1
-            <%= f.radio_button :q9, 2 %> 2
-            <%= f.radio_button :q9, 3 %> 3
-            <%= f.radio_button :q9, 4 %> 4
-            <%= f.radio_button :q9, 5 %> 5
-        </div>
-        <div class="field">
-            <%= f.label :q10, "Q10: The grading in the course was fair" %>
-            <%= f.radio_button :q10, 1 %> 1
-            <%= f.radio_button :q10, 2 %> 2
-            <%= f.radio_button :q10, 3 %> 3
-            <%= f.radio_button :q10, 4 %> 4
-            <%= f.radio_button :q10, 5 %> 5
-        </div> 
+        </div>                
         <p><%= f.submit "add evaluation for this professor" %></p>
     
     <%end%>
